Rename project to openfisca-barcelona to be more accurate with it's scope.

--- a/production-config/config.ini
+++ b/production-config/config.ini
@@ -21,7 +21,7 @@ proc_name = openfisca-web-api
 
 [app:main]
 use = egg:OpenFisca-Web-API
-country_package = openfisca_spain
+country_package = openfisca_barcelona
 log_level = WARNING
 reforms =
 
