Tweaks to have HG077_03 working on the frontend

--- a/openfisca_barcelona/tests/variables/077-demarcacio.yaml
+++ b/openfisca_barcelona/tests/variables/077-demarcacio.yaml
@@ -1,7 +1,7 @@
 - name: "Demarcacio 077 - Barcelona ciutat"
   period: 2017-01
   input_variables:
-    codi_postal: 08003
+    codi_postal_empadronament: 08003
   output_variables:
     lloguer_maxim_segons_demarcacio_077: 750
 
@@ -9,28 +9,28 @@
 - name: "Demarcacio 077 - Barcelona provincia"
   period: 2017-01
   input_variables:
-    codi_postal: 08370
+    codi_postal_empadronament: 08370
   output_variables:
     lloguer_maxim_segons_demarcacio_077: 600
 
 - name: "Demarcacio 077 - Girona provincia"
   period: 2017-01
   input_variables:
-    codi_postal: 17310
+    codi_postal_empadronament: 17310
   output_variables:
     lloguer_maxim_segons_demarcacio_077: 450
 
 - name: "Demarcacio 077 - Tarragona provincia"
   period: 2017-01
   input_variables:
-    codi_postal: 43008
+    codi_postal_empadronament: 43008
   output_variables:
     lloguer_maxim_segons_demarcacio_077: 450
 
 - name: "Demarcacio 077 - Lleida provincia"
   period: 2017-01
   input_variables:
-    codi_postal: 25567
+    codi_postal_empadronament: 25567
   output_variables:
     lloguer_maxim_segons_demarcacio_077: 400
 
@@ -38,6 +38,6 @@
 #- name: "Demarcacio 077 - Terres de l'Ebre"
 #  period: 2017-01
 #  input_variables:
-#    codi_postal: 43870
+#    codi_postal_empadronament: 43870
 #  output_variables:
 #    lloguer_maxim_segons_demarcacio_077: 350
