--- a/openfisca_barcelona/tests/benefits/HG-077-03.yaml
+++ b/openfisca_barcelona/tests/benefits/HG-077-03.yaml
@@ -10,7 +10,6 @@
      import_del_lloguer: 700
      relacio_de_parentiu_amb_el_propietari: false
      data_signatura_contracte_de_lloguer: '2016-12-01'
-     contracte_obtingut_a_traves_de_borsa_de_mediacio_o_gestionat_per_entitat_sense_anim_de_lucre: false
   persones:
    - id: "persona1"
      data_naixement: '1961-01-15'
@@ -19,7 +18,7 @@
      resident_a_catalunya_durant_5_anys: false
      risc_d_exclusio_social: true
      titular_contracte_de_lloguer: true
-     codi_postal: 08003
+     codi_postal_empadronament: 08003
      ha_residit_a_lextranger_els_ultims_24_mesos: false
      ha_residit_a_lextranger_36_mesos_continuats: false
      ha_residit_a_lextranger_60_mesos_discontinuats: false
@@ -39,7 +38,6 @@
      import_del_lloguer: 700
      relacio_de_parentiu_amb_el_propietari: false
      data_signatura_contracte_de_lloguer: '2016-12-01'
-     contracte_obtingut_a_traves_de_borsa_de_mediacio_o_gestionat_per_entitat_sense_anim_de_lucre: false
   persones:
    - id: "persona1"
      data_naixement: '1961-01-15'
@@ -47,7 +45,7 @@
      ciutat_empadronament: "Barcelona"
      resident_a_catalunya_durant_5_anys: false
      titular_contracte_de_lloguer: true
-     codi_postal: 08003
+     codi_postal_empadronament: 08003
      ha_residit_a_lextranger_els_ultims_24_mesos: true
      ha_residit_a_lextranger_36_mesos_continuats: true
      ha_residit_a_lextranger_60_mesos_discontinuats: false
@@ -70,7 +68,6 @@
      import_del_lloguer: 700
      relacio_de_parentiu_amb_el_propietari: false
      data_signatura_contracte_de_lloguer: '2016-12-01'
-     contracte_obtingut_a_traves_de_borsa_de_mediacio_o_gestionat_per_entitat_sense_anim_de_lucre: false
   persones:
    - id: "persona1"
      data_naixement: '1961-01-15'
@@ -78,9 +75,9 @@
      ciutat_empadronament: "Barcelona"
      resident_a_catalunya_durant_5_anys: true
      titular_contracte_de_lloguer: true
-     codi_postal: 08003
-     ha_residit_a_lextranger_els_ultims_24_mesos: true
-     ha_residit_a_lextranger_36_mesos_continuats: true
+     codi_postal_empadronament: 08003
+     ha_residit_a_lextranger_els_ultims_24_mesos: false
+     ha_residit_a_lextranger_36_mesos_continuats: false
      ha_residit_a_lextranger_60_mesos_discontinuats: false
      nacionalitat: "Espanyola"
   output_variables:
