--- a/openfisca_barcelona/tests/benefits/HG-077-03.yaml
+++ b/openfisca_barcelona/tests/benefits/HG-077-03.yaml
@@ -1,20 +1,20 @@
 - name: "Espanyol resident a catalunya amb tots els condicionants reb l'ajuda"
   description: Ajuda lloguer just
   period: 2017-01
-  absolute_error_margin: false
+  absolute_error_margin: 10
 
   families:
      adults: ["persona1"]
-     esta_al_corrent_del_pagament_de_lloguer: true
+     import_del_deute_amb_el_propietari: 0
      lloguer_domiciliat: true
      import_del_lloguer: 700
      relacio_de_parentiu_amb_el_propietari: false
      data_signatura_contracte_de_lloguer: '2016-12-01'
+     contracte_obtingut_a_traves_de_borsa_de_mediacio_o_gestionat_per_entitat_sense_anim_de_lucre: true
   persones:
    - id: "persona1"
      data_naixement: '1961-01-15'
      ingressos_disponibles: 7000
-     ciutat_empadronament: "Barcelona"
      resident_a_catalunya_durant_5_anys: false
      risc_d_exclusio_social: true
      titular_contracte_de_lloguer: true
@@ -26,6 +26,117 @@
   output_variables:
      HG_077_03_mensual: [ 200 ]
 
+- name: "Espanyol resident a catalunya amb tots els condicionants reb l'ajuda minim 20€"
+  description: Ajuda lloguer just
+  period: 2017-01
+  absolute_error_margin: false
+
+  families:
+     adults: ["persona1"]
+     import_del_deute_amb_el_propietari: 0
+     lloguer_domiciliat: true
+     import_del_lloguer: 190
+     relacio_de_parentiu_amb_el_propietari: false
+     data_signatura_contracte_de_lloguer: '2016-12-01'
+     contracte_obtingut_a_traves_de_borsa_de_mediacio_o_gestionat_per_entitat_sense_anim_de_lucre: true
+  persones:
+   - id: "persona1"
+     data_naixement: '1961-01-15'
+     ingressos_disponibles: 7000
+     resident_a_catalunya_durant_5_anys: false
+     risc_d_exclusio_social: true
+     titular_contracte_de_lloguer: true
+     codi_postal_empadronament: 08003
+     ha_residit_a_lextranger_els_ultims_24_mesos: false
+     ha_residit_a_lextranger_36_mesos_continuats: false
+     ha_residit_a_lextranger_60_mesos_discontinuats: false
+     nacionalitat: "Espanyola"
+  output_variables:
+     HG_077_03_mensual: [ 20 ]
+
+- name: "Espanyol resident a catalunya amb tots els condicionants reb l'ajuda calcul import"
+  description: Ajuda lloguer just
+  period: 2017-01
+  absolute_error_margin: false
+
+  families:
+     adults: ["persona1"]
+     import_del_deute_amb_el_propietari: 0
+     lloguer_domiciliat: true
+     import_del_lloguer: 210
+     relacio_de_parentiu_amb_el_propietari: false
+     data_signatura_contracte_de_lloguer: '2016-12-01'
+     contracte_obtingut_a_traves_de_borsa_de_mediacio_o_gestionat_per_entitat_sense_anim_de_lucre: true
+  persones:
+   - id: "persona1"
+     data_naixement: '1961-01-15'
+     ingressos_disponibles: 7000
+     resident_a_catalunya_durant_5_anys: false
+     titular_contracte_de_lloguer: true
+     codi_postal_empadronament: 08003
+     ha_residit_a_lextranger_els_ultims_24_mesos: false
+     ha_residit_a_lextranger_36_mesos_continuats: false
+     ha_residit_a_lextranger_60_mesos_discontinuats: false
+     nacionalitat: "Espanyola"
+  output_variables:
+     HG_077_03_mensual: [ 35.1000061 ]
+
+- name: "Espanyol resident a catalunya amb tots els condicionants no reb l'ajuda, lloguer super import maxim terres de l'ebre"
+  description: Ajuda lloguer just
+  period: 2017-01
+  absolute_error_margin: false
+
+  families:
+     adults: ["persona1"]
+     import_del_deute_amb_el_propietari: 0
+     lloguer_domiciliat: true
+     import_del_lloguer: 360
+     relacio_de_parentiu_amb_el_propietari: false
+     data_signatura_contracte_de_lloguer: '2016-12-01'
+     contracte_obtingut_a_traves_de_borsa_de_mediacio_o_gestionat_per_entitat_sense_anim_de_lucre: true
+  persones:
+   - id: "persona1"
+     data_naixement: '1961-01-15'
+     ingressos_disponibles: 7000
+     resident_a_catalunya_durant_5_anys: false
+     risc_d_exclusio_social: true
+     titular_contracte_de_lloguer: true
+     codi_postal_empadronament: 43895
+     ha_residit_a_lextranger_els_ultims_24_mesos: false
+     ha_residit_a_lextranger_36_mesos_continuats: false
+     ha_residit_a_lextranger_60_mesos_discontinuats: false
+     nacionalitat: "Espanyola"
+  output_variables:
+     HG_077_03_mensual: [ 0 ]
+
+- name: "Espanyol resident a catalunya amb tots els condicionants reb l'ajuda minim 20€"
+  description: Ajuda lloguer just
+  period: 2017-01
+  absolute_error_margin: false
+
+  families:
+     adults: ["persona1"]
+     import_del_deute_amb_el_propietari: 0
+     lloguer_domiciliat: true
+     import_del_lloguer: 210
+     relacio_de_parentiu_amb_el_propietari: false
+     data_signatura_contracte_de_lloguer: '2016-12-01'
+     contracte_obtingut_a_traves_de_borsa_de_mediacio_o_gestionat_per_entitat_sense_anim_de_lucre: true
+  persones:
+   - id: "persona1"
+     data_naixement: '1961-01-15'
+     ingressos_disponibles: 7000
+     resident_a_catalunya_durant_5_anys: false
+     risc_d_exclusio_social: true
+     titular_contracte_de_lloguer: true
+     codi_postal_empadronament: 08003
+     ha_residit_a_lextranger_els_ultims_24_mesos: false
+     ha_residit_a_lextranger_36_mesos_continuats: false
+     ha_residit_a_lextranger_60_mesos_discontinuats: false
+     nacionalitat: "Espanyola"
+  output_variables:
+     HG_077_03_mensual: [ 35.1000061 ]
+
 - name: "Espanyol retornat resident a catalunya amb tots els condicionants reb l'ajuda"
   description: Ajuda lloguer just
   period: 2017-01
@@ -33,16 +144,16 @@
 
   families:
      adults: ["persona1"]
-     esta_al_corrent_del_pagament_de_lloguer: true
+     import_del_deute_amb_el_propietari: 0
      lloguer_domiciliat: true
      import_del_lloguer: 700
      relacio_de_parentiu_amb_el_propietari: false
      data_signatura_contracte_de_lloguer: '2016-12-01'
+     contracte_obtingut_a_traves_de_borsa_de_mediacio_o_gestionat_per_entitat_sense_anim_de_lucre: true
   persones:
    - id: "persona1"
      data_naixement: '1961-01-15'
      ingressos_disponibles: 7000
-     ciutat_empadronament: "Barcelona"
      resident_a_catalunya_durant_5_anys: false
      titular_contracte_de_lloguer: true
      codi_postal_empadronament: 08003
@@ -63,16 +174,16 @@
 
   families:
      adults: ["persona1"]
-     esta_al_corrent_del_pagament_de_lloguer: true
+     import_del_deute_amb_el_propietari: 0
      lloguer_domiciliat: true
      import_del_lloguer: 700
      relacio_de_parentiu_amb_el_propietari: false
      data_signatura_contracte_de_lloguer: '2016-12-01'
+     contracte_obtingut_a_traves_de_borsa_de_mediacio_o_gestionat_per_entitat_sense_anim_de_lucre: true
   persones:
    - id: "persona1"
      data_naixement: '1961-01-15'
      ingressos_disponibles: 7000
-     ciutat_empadronament: "Barcelona"
      resident_a_catalunya_durant_5_anys: true
      titular_contracte_de_lloguer: true
      codi_postal_empadronament: 08003
@@ -82,3 +193,5 @@
      nacionalitat: "Espanyola"
   output_variables:
      HG_077_03_mensual: [ 200 ]
+
+
