--- a/openfisca_barcelona/tests/benefits/GG-270.yaml
+++ b/openfisca_barcelona/tests/benefits/GG-270.yaml
@@ -7,7 +7,7 @@
   persones:
    - id: "adult"
      data_naixement: '1961-01-15'
-     ingressos_disponibles: 529
+     ingressos_bruts: 529
      es_orfe_dels_dos_progenitors: true
      es_victima_de_violencia_masclista: true
      es_empadronat_a_catalunya: true
@@ -30,7 +30,7 @@
   persones:
    - id: "adult"
      data_naixement: '1961-01-15'
-     ingressos_disponibles: 531
+     ingressos_bruts: 531
      es_orfe_dels_dos_progenitors: true
      es_victima_de_violencia_masclista: true
      es_empadronat_a_catalunya: true
@@ -53,7 +53,7 @@
   persones:
    - id: "adult"
      data_naixement: '1961-01-15'
-     ingressos_disponibles: 529
+     ingressos_bruts: 529
      es_orfe_dels_dos_progenitors: true
      es_victima_de_violencia_masclista: true
      es_empadronat_a_catalunya: false
@@ -75,7 +75,7 @@
   persones:
    - id: "adult"
      data_naixement: '1961-01-15'
-     ingressos_disponibles: 529
+     ingressos_bruts: 529
      es_orfe_dels_dos_progenitors: true
      es_victima_de_violencia_masclista: true
      es_empadronat_a_catalunya: true
@@ -98,7 +98,7 @@
   persones:
    - id: "adult"
      data_naixement: '1961-01-15'
-     ingressos_disponibles: 529
+     ingressos_bruts: 529
      es_orfe_dels_dos_progenitors: true
      es_victima_de_violencia_masclista: true
      es_empadronat_a_catalunya: true
@@ -121,7 +121,7 @@
   persones:
    - id: "adult"
      data_naixement: '1961-01-15'
-     ingressos_disponibles: 529
+     ingressos_bruts: 529
      es_orfe_dels_dos_progenitors: true
      es_victima_de_violencia_masclista: true
      es_empadronat_a_catalunya: true
@@ -144,7 +144,7 @@
   persones:
    - id: "adult"
      data_naixement: '1961-01-15'
-     ingressos_disponibles: 529
+     ingressos_bruts: 529
      es_orfe_dels_dos_progenitors: true
      es_victima_de_violencia_masclista: true
      es_empadronat_a_catalunya: true
@@ -166,7 +166,7 @@
   persones:
    - id: "adult"
      data_naixement: '1961-01-15'
-     ingressos_disponibles: 529
+     ingressos_bruts: 529
      es_orfe_dels_dos_progenitors: true
      es_victima_de_violencia_masclista: true
      es_empadronat_a_catalunya: true
@@ -190,7 +190,7 @@
   persones:
    - id: "adult"
      data_naixement: '1998-03-15'
-     ingressos_disponibles: 529
+     ingressos_bruts: 529
      es_orfe_dels_dos_progenitors: true
      es_victima_de_violencia_masclista: true
      es_empadronat_a_catalunya: true
@@ -216,7 +216,7 @@
   persones:
    - id: "adult"
      data_naixement: '1998-03-15'
-     ingressos_disponibles: 529
+     ingressos_bruts: 529
      es_orfe_dels_dos_progenitors: true
      es_victima_de_violencia_masclista: true
      es_empadronat_a_catalunya: false
